src/main/java/error/example/domain/runtimeexception/DomainRuntimeException.java
package error.example.domain.runtimeexception;

public class DomainRuntimeException extends RuntimeException {

    public DomainRuntimeException(String message) {
        super(message);
    }
}
